--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rotto-front-produtor",
+  "name": "otre-front-produtor",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
