Fix package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "otre-front-produtor",
+  "homepage": "https://ressenzo.github.io/otre-front-produtor",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
