--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "express": "^4.18.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
